--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "styles.css">
+    <link rel = "stylesheet" href = "CSS-Grid-Project.css">
     <title>Alfredo's CSS Grid debut</title>
 </head>
 <body>
@@ -18,6 +18,11 @@
     <a href = "https://radiant-alsando1.wordpress.com/"><img class = "logo" 
         src = "https://lh5.googleusercontent.com/proxy/tTtoD3tzhWuIOtK7rSnNW5AFQ7cC1jcw2UmCEmwpLswCaqfJgvqdtWb4nCI8VJoH_NZE1QfhhbSJ7shZOQUa7avInIefgtMduVPxCyiGyB6IaelnUDKIby6q4tFYjcu1Ma8m7as04doZvw832ZQxC-xfZ-MgJxzcm6pSIvU8Zg_eZJyqpE6H8vjg5VyAfrpFWOtkRjM=w1200-h630-p-k-no-nu">
     </a>
+    <p id = "filler">THISSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS ISSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
+      MYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY ATTTTTTTTTTTTTTTTTTTTTTEMPTTTTTTTTTTTTTTTT 
+      TOOOOOOOOOOOOOOOOOOOOOOOOOOOOO FILLLLLLLLLLLLLLLLLLLLL THISSSSSSSSSSSSSSSSSSSSSSSSSSSSSS SPACEEEEEEEEEEEEEEEEEEEE 
+      UPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP (like this was some kind of newsletter)
+    </p>
    </header>
 <blockquote class = "blockquote">
     <hr>
