--- a/CSS-GRID-PROJECT.html
+++ b/CSS-GRID-PROJECT.html
@@ -18,10 +18,7 @@
     <a href = "https://radiant-alsando1.wordpress.com/"><img class = "logo" 
         src = "https://lh5.googleusercontent.com/proxy/tTtoD3tzhWuIOtK7rSnNW5AFQ7cC1jcw2UmCEmwpLswCaqfJgvqdtWb4nCI8VJoH_NZE1QfhhbSJ7shZOQUa7avInIefgtMduVPxCyiGyB6IaelnUDKIby6q4tFYjcu1Ma8m7as04doZvw832ZQxC-xfZ-MgJxzcm6pSIvU8Zg_eZJyqpE6H8vjg5VyAfrpFWOtkRjM=w1200-h630-p-k-no-nu">
     </a>
-    <p id = "filler">THISSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS ISSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS
-      MYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY ATTTTTTTTTTTTTTTTTTTTTTEMPTTTTTTTTTTTTTTTT 
-      TOOOOOOOOOOOOOOOOOOOOOOOOOOOOO FILLLLLLLLLLLLLLLLLLLLL THISSSSSSSSSSSSSSSSSSSSSSSSSSSSSS SPACEEEEEEEEEEEEEEEEEEEE 
-      UPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP (like this was some kind of newsletter)
+    <p id = "filler">THIS IS MY ATTEMPT TO FILL THIS SPACE UP (like this was some kind of newsletter)
     </p>
    </header>
 <blockquote class = "blockquote">
